fix scrollbar for entire page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -268,6 +268,7 @@
 
 /* WEB3 COMPONENT */
 .clients-container {
+  overflow: hidden;
   position: relative;
   width: 100%;
   padding: 2em;
